namespace cpp dsn
namespace java dsn

// place holder
struct blob
{
}

struct error_code
{
}

struct task_code
{

}

struct rpc_address
{

}
